trying to fix issue with image not loading on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@ h1{
 .navbar{
     padding: 0.8vw;
     font-size: 2vw;
-    background-image: url(../images/leaves.jpg);
+    background-image: url(./../images/leaves.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
